it values for db properties

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
     <script src='lib/lodash/lodash.min.js'></script>
 	<script src='lib/moment/min/moment-with-locales.min.js'></script>
 	<script src='lib/ngDatepicker/src/js/ngDatepicker.js'></script>
+	<script src='env.js'></script>
 	<script src='build/app.js'></script>
 </body<>
 </html>
