--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,22 @@
 	<script src='lib/modernizr/modernizr.js'></script>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<meta charset='UTF-8'>
-	<meta name='description' content='Event Registration Jugenddienst Bozen-Land'>
-	<meta name='keywords' content='Jugendsommer Programme Anmeldung Jugenddienst Bozen-Land'>
+	<meta name='description' content='Event Registration Jugenddienst'>
+	<meta name='keywords' content='Jugendsommer Programme Anmeldung Jugenddienst'>
 	<meta name='author' content='Florian Edelmaier'>
 </head>
 <body ng-app='js' ng-controller='ApplicationCtrl'>
 	<nav class='navbar navbar-default'>
 		<div class='container'>
 			<div ng-include src='"templates/lang.html"'></div>
-			<div class='navbar-header'>
+			<div ng-show="!isKiso" class='navbar-header'>
 				<a class='navbar-brand' href='http://www.jugenddienst.it/home_jd_bozen-land.html'>
-					<img src='assets/jdb.gif' alt='Jugenddienst Bozen'>
+					<img src='assets/jdbl.gif' alt='Jugenddienst Bozen-Land'>
+				</a>
+			</div>
+			<div ng-show="isKiso" class='navbar-header'>
+				<a class='navbar-brand' href='http://www.jugenddienst.it/home_jd_xx_1.html'>
+					<img src='assets/jdb.png' alt='Jugenddienst Bozen'>
 				</a>
 			</div>
 			<ul class='nav navbar-nav'>
