--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
 			</div>
 			<div ng-show="isKiso" class='navbar-header'>
 				<a class='navbar-brand' href='http://www.jugenddienst.it/home_jd_xx_1.html'>
-					<img src='assets/jdb.png' alt='Jugenddienst Bozen'>
+					<!--<img src='assets/jdb.png' alt='Jugenddienst Bozen'>-->
+					<img src='assets/kiso.png' alt='kiso' style='height:60px;width:60px'>
 				</a>
 			</div>
 			<ul class='nav navbar-nav'>
