layout changes kiso

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 				</a>
 			</div>
 			<div ng-show="isKiso" class='navbar-header'>
-				<a class='navbar-brand' href='http://www.jugenddienst.it/home_jd_xx_1.html'>
+				<a class='navbar-brand' href='https://www.kiso.bz.it'>
 					<!--<img src='assets/jdb.png' alt='Jugenddienst Bozen'>-->
 					<img src='assets/kiso.png' alt='kiso' style='height:60px;width:60px'>
 				</a>
