add both logos for kiso

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,13 @@
 				</a>
 			</div>
 			<div ng-show="isKiso" class='navbar-header'>
-				<a class='navbar-brand' href='https://www.kiso.bz.it'>
-					<!--<img src='assets/jdb.png' alt='Jugenddienst Bozen'>-->
-					<img src='assets/kiso.png' alt='kiso' style='height:60px;width:60px'>
+				<a class='navbar-brand' href='https://www.kiso.bz.it/#/'>
+					<img src='assets/kiso.png' alt='kiso' style='height:50px;width:50px'>
+				</a>
+			</div>
+			<div ng-show="isKiso" class='navbar-header'>
+				<a class='navbar-brand' href='http://www.jugenddienst.it/Jugenddienst_Bozen.html'>
+					<img src='assets/jdb.png' alt='Jugenddienst Bozen'>
 				</a>
 			</div>
 			<ul class='nav navbar-nav'>
