--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class='no-js'>
 <head>
-	<title>Jugendsommer</title>
+	<title>Kindersommer</title>
 	<link rel='icon' href='favicon.ico' type='image/x-icon'>
 	<link rel='stylesheet' href='lib/bootstrap/dist/css/bootstrap.min.css' type='text/css'>
 	<link rel='stylesheet' href='lib/angular-busy/dist/angular-busy.min.css' type='text/css'>
