autocomplete contact search

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Kindersommer</title>
 	<link rel='icon' href='favicon.ico' type='image/x-icon'>
+	<link rel='stylesheet' href='lib/angular-szn-autocomplete/src/angular-szn-autocomplete.css'>
 	<link rel='stylesheet' href='lib/bootstrap/dist/css/bootstrap.min.css' type='text/css'>
 	<link rel='stylesheet' href='lib/angular-busy/dist/angular-busy.min.css' type='text/css'>
 	<link rel='stylesheet' href='lib/toastr/toastr.min.css' type='text/css'>
@@ -68,6 +69,7 @@
     <script src='lib/lodash/lodash.min.js'></script>
 	<script src='lib/moment/min/moment-with-locales.min.js'></script>
 	<script src='lib/ngDatepicker/src/js/ngDatepicker.js'></script>
+	<script src="lib/angular-szn-autocomplete/src/angular-szn-autocomplete.js"></script>
 	<script src='env.js'></script>
 	<script src='build/app.js'></script>
 </body<>
