--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,15 @@
 				<li><a id='nav_link_programme' href='/#/'>{{'NAV.PROGRAM' | translate}}</a></li>
 				<li ng-show='iSvc.isAuthenticated()'><a id='nav_link_myres' href='/#/myRegistrations'>{{'NAV.MYRES' | translate}}</a></li>
 				<li ng-show='iSvc.isAuthorized("fadmin")'><a href='/#/myCommitments'>{{'NAV.MYCOMMITS' | translate}}</a></li>
-                <li ng-show='iSvc.isAuthorized("admin")'><a href='/#/report'>{{'NAV.REPORT' | translate}}</a></li>
+				<li ng-show='iSvc.isAuthorized("admin")' class="dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+      					{{'NAV.REPORT' | translate}} <span class="caret"></span>
+    				</a>
+    				<ul class="dropdown-menu">
+						<li ng-show='iSvc.isAuthorized("admin")'><a href='/#/report'>{{'NAV.RESERVATIONS' | translate}}</a></li>
+						<li ng-show='iSvc.isAuthorized("admin")'><a href='/#/payment'>{{'NAV.PAYMENT' | translate}}</a></li>
+    				</ul>
+				</li>
                 <li ng-show='iSvc.isAuthorized("fadmin")'><a href='/#/resources'>{{'NAV.LENDINGS' | translate}}</a></li>
 				<li ng-show='iSvc.isAuthorized("admin")'><a href='/#/userRolesSearch'>{{'NAV.USERSEARCH' | translate}}</a></li>
 			</ul>
