link to new shop

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 						<li ng-show='iSvc.isAuthorized("admin") && !isKiso'><a href='/#/payment'>{{'NAV.PAYMENT' | translate}}</a></li>
     				</ul>
 				</li>
-                <li ng-show='iSvc.isAuthorized("fadmin")'><a href='/#/resources'>{{'NAV.LENDINGS' | translate}}</a></li>
+                <li ng-show='iSvc.isAuthorized("fadmin")'><a target='_blank' href='http://www2.jugendsommer.com/'>{{'NAV.LENDINGS' | translate}}</a></li>
 				<li ng-show='iSvc.isAuthorized("admin")'><a href='/#/userRolesSearch'>{{'NAV.USERSEARCH' | translate}}</a></li>
 			</ul>
 		    <div ng-include src='"templates/login.html"'></div>
