excel export for report

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
 	<script src='lib/moment/min/moment-with-locales.min.js'></script>
 	<script src='lib/ngDatepicker/src/js/ngDatepicker.js'></script>
 	<script src="lib/angular-szn-autocomplete/src/angular-szn-autocomplete.js"></script>
+	<script src='lib/ng-table-excel-export/ng-table-excel-export.min.js'></script>
 	<script src='env.js'></script>
 	<script src='build/app.js'></script>
 </body<>
