use comboboxes for bithdate

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
     <script src='lib/toastr/toastr.min.js'></script>
     <script src='lib/lodash/lodash.min.js'></script>
 	<script src='lib/moment/min/moment-with-locales.min.js'></script>
+	<script src='lib/ngComboDatePicker/source/ngComboDatePicker.min.js'></script>
 	<script src='lib/ngDatepicker/src/js/ngDatepicker.js'></script>
 	<script src="lib/angular-szn-autocomplete/src/angular-szn-autocomplete.js"></script>
 	<script src='lib/ng-table-excel-export/ng-table-excel-export.min.js'></script>
