--- a/public/index.html
+++ b/public/index.html
@@ -58,5 +58,13 @@
 	<script src='lib/ng-table-excel-export/ng-table-excel-export.min.js'></script>
 	<script src='env.js'></script>
 	<script src='build/app.js'></script>
-</body<>
+</body>
+<!--
+- Excel Export Anmeldungen ausblenden: Frühbetreuung, kann Schwimmen, allein nach hause, kommentar intern, media, news
+- Excel Export Anwesenheit
+x Excel Export Anwesenheit beschränken auf Programme
+x Report Ausleihe Filter Ausleiherin
+x Text nach Anmeldung
+- Format Export Anmeldungen
+-->
 </html>
