--- a/public/index.html
+++ b/public/index.html
@@ -60,11 +60,11 @@
 	<script src='build/app.js'></script>
 </body>
 <!--
-- Excel Export Anmeldungen ausblenden: Frühbetreuung, kann Schwimmen, allein nach hause, kommentar intern, media, news
+x Excel Export Anmeldungen ausblenden: Frühbetreuung, kann Schwimmen, allein nach hause, kommentar intern, media, news
 - Excel Export Anwesenheit
 x Excel Export Anwesenheit beschränken auf Programme
 x Report Ausleihe Filter Ausleiherin
 x Text nach Anmeldung
-- Format Export Anmeldungen
+x Format Export Anmeldungen
 -->
 </html>
