--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
 	<script src='lib/ngDatepicker/src/js/ngDatepicker.js'></script>
 	<script src="lib/angular-szn-autocomplete/src/angular-szn-autocomplete.js"></script>
 	<script src='lib/ng-table-excel-export/ng-table-excel-export.min.js'></script>
+	<script src='lib/angular-file-saver/dist/angular-file-saver.bundle.min.js'></script>
 	<script src='env.js'></script>
 	<script src='build/app.js'></script>
 </body>
