new selection reservation

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <!--<link rel="stylesheet" href="lib/component-font-awesome/css/fontawesome.min.css">-->
 	<link rel='stylesheet' href='lib/ngDatepicker/src/css/ngDatepicker.css'>
+	<link rel='stylesheet' href='lib/isteven-angular-multiselect/isteven-multi-select.css'>
     <link rel='stylesheet' href='css/app.css' type='text/css'>
 	<script src='lib/modernizr/modernizr.js'></script>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -58,6 +59,7 @@
 	<script src="lib/angular-szn-autocomplete/src/angular-szn-autocomplete.js"></script>
 	<script src='lib/ng-table-excel-export/ng-table-excel-export.min.js'></script>
 	<script src='lib/angular-file-saver/dist/angular-file-saver.bundle.min.js'></script>
+	<script src='lib/isteven-angular-multiselect/isteven-multi-select.js'></script>
 	<script src='env.js'></script>
 	<script src='build/app.js'></script>
 </body>
